add release notes
(cherry picked from commit 5d54c9afcd64a275351668ca5ce0db8b5027b26a)